<resources>
    <string name="app_name">Discover Movies</string>
    <string name="title_about_activity">About</string>
    <string name="title_details_activity">Movie Details</string>
    <string name="title_credit_details_activity">Person Details</string>
    <string name="tmdb_link">TMDb</string>
    <string name="movies">Movies</string>
    <string name="landing_shows">Shows</string>
    <string name="activity_login">Login</string>
    <string name="app_discover_shows">Discover TV shows</string>
    <string name="app_show_tickets">Buy show tickets</string>
    <string name="coming_soon">Coming soon</string>
    <string name="cast_credits">Cast credits</string>
    <string name="crew_credits">Crew credits</string>
    <string name="title_profile">Profile</string>
    <string name="title_in_theaters">Now playing</string>
    <string name="profile_movie_details">/Tap to see the movies</string>
    <string name="profile_show_details">/Tap to see the shows</string>
    <string name="search_menu">Search</string>
    <string name="search_menu_hint">Select to provide movie name</string>
    <string name="material_dialog_ok">OK</string>
    <string name="material_dialog_cancel">Cancel</string>

    <!--Resource string with placeholder-->
    <string name="concat_strings_placeholder" translatable="false">%1$s | "%2$s"</string>
    <string name="concat_strings_placeholder_shows" translatable="false">%1$d Seasons\u00A0\u2022%2$d Episodes\u00A0\u2022%3$f Popularity
        \u00A0\u2022%4$s First air date\u00A0\u2022\u00A0%5$f Vote\u00A0\u2022%6$s Last air date\u00A0\u2022%7$s Type</string>

    <!-- Buttons -->
    <string name="button_skip">Skip</string>
    <string name="button_next">Next</string>
    <string name="button_got_it">Got it</string>

    <string name="lorem_placeholder" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="about_description">Application will allow user to discover movies and shows. The application is made for Model-View-ViewModel architecture.</string>

    <string name="msg_app_version">App Version: %s</string>
    <string name="about_app_copyright">&#169; Manorath Chapagai | All rights reserved.</string>
    <string name="msg_android_trademark">Android is a trademark of Google Inc.</string>
    <string name="msg_about_fork_me_on_github">Fork me on GitHub!</string>
    <string name="msg_about_github_url">https://github.com/mchapagai/android-movies</string>

    <string name="login_placeholder">Login</string>
    <string name="signup_placeholder">Sign up</string>
    <string name="signout_placeholder">Sign out</string>
    <string name="password_placeholder">Password</string>
    <string name="username_placeholder">Username</string>
    <string name="no_account_placeholder">Don\'t have an account?</string>

    <!-- Service Error messages -->
    <string name="service_error_title">Oops, something went bad!</string>
    <string name="service_error_404">The resource you requested could not be found.</string>
    <string name="service_error_message_401">Invalid API key: You must be granted a valid key.</string>

    <!-- Action menu -->
    <string name="menu_sort">Sorting</string>
    <string name="menu_sort_popularity">Most popular</string>
    <string name="menu_sort_vote_average">Highest rated</string>
    <string name="menu_sort_vote_count">Most rated</string>

    <string name="movie_details_trailer_placeholder">Trailer</string>
    <string name="date_placeholder" translatable="false">01-01-2010</string>
    <string name="rating_placeholder" translatable="false">6,5/10 (5430)</string>
    <string name="reviews_header" translatable="false">Reviews</string>
    <string name="details_empty_video_message">Unfortunately, we couldn\'t find any video for the particular movies.</string>
    <string name="details_rating_votes_count" translatable="false">%s/10 (%s)</string>
    <string name="details_tmdb_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>

    <!-- ADA Strings-->
    <string name="user_profile_ada">User profile</string>
    <string name="about">About</string>

    <!-- Login Screen -->
    <string name="prompt_to_login_title">Oh, snap!</string>
    <string name="prompt_to_login_message">In order to access this feature, you must log in!</string>
    <string name="welcome_screen_movie_details">An app to allow users to discover the most popular movies playing. This application demonstrates understanding of the fundamental elements of programming for Android. Application will communicate with the Internet and provide a responsive and delightful user expericence.</string>
    <string name="welcome_screen_shows_details">Now user can browse the TV shows.</string>

    <!-- ADA Global -->
    <string name="login_image_ada">Login screen</string>

    <!-- Transition names-->
    <string name="movies_poster_transition" translatable="false">posterPathTransition</string>

</resources>
