<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/search_menu"
        android:hint="@string/search_menu_hint"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/icon_sort"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_popularity"
                    android:title="@string/menu_sort_popularity" />
                <item
                    android:id="@+id/menu_sort_vote_count"
                    android:title="@string/menu_sort_vote_count" />
                <item
                    android:id="@+id/menu_sort_vote_average"
                    android:title="@string/menu_sort_vote_average" />
            </group>
        </menu>
    </item>

</menu>
