<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/icon_sort"
        android:title="@string/menu_sort"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_popularity"
                    android:title="@string/menu_sort_popularity" />
                <item
                    android:id="@+id/menu_sort_vote_count"
                    android:title="@string/menu_sort_vote_count" />
                <item
                    android:id="@+id/menu_sort_vote_average"
                    android:title="@string/menu_sort_vote_average" />
                <item
                    android:id="@+id/menu_sort_favorites"
                    android:title="@string/menu_sort_favorites" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/icon_logout"
        app:showAsAction="always"
        android:title="@string/title_about_activity" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/icon_info"
        app:showAsAction="ifRoom"
        android:title="@string/title_about_activity" />
</menu>
