<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_40dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:src="@drawable/icon_robot" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_32dp"
            android:layout_weight="0.1">

            <ImageView
                android:id="@+id/mainImageView1"
                android:layout_width="@dimen/margin_24dp"
                android:layout_height="@dimen/margin_24dp"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:src="@drawable/icon_user"
                android:tint="?attr/darkTextPrimaryColor" />

            <ImageView
                android:id="@+id/mainImageView2"
                android:layout_width="@dimen/margin_24dp"
                android:layout_height="@dimen/margin_24dp"
                android:layout_below="@id/mainImageView1"
                android:layout_marginTop="@dimen/margin_20dp"
                android:src="@drawable/icon_password"
                android:tint="?attr/darkTextPrimaryColor" />

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/mainImageView1"
                android:layout_alignBottom="@id/mainImageView1"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_toEndOf="@id/mainImageView1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/username_placeholder"
                android:inputType="textEmailAddress"
                android:textColor="?attr/darkTextPrimaryColor"
                android:textSize="@dimen/text_medium" />

            <View
                style="@style/HorizontalDivider"
                android:layout_below="@id/username_edit_text"
                android:layout_marginTop="@dimen/margin_24dp" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/mainImageView2"
                android:layout_alignBottom="@id/mainImageView2"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_toEndOf="@id/mainImageView2"
                android:background="@null"
                android:ems="10"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                android:textColor="?attr/darkTextPrimaryColor"
                android:textSize="@dimen/text_medium" />

            <View
                android:id="@+id/dummy_view"
                style="@style/HorizontalDivider"
                android:layout_below="@id/password_edit_text"
                android:layout_marginTop="@dimen/margin_24dp" />

            <Button
                android:id="@+id/login_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dummy_view"
                android:layout_marginTop="@dimen/margin_24dp"
                android:background="@drawable/graphics_button_login"
                android:text="@string/login_placeholder"
                android:textAllCaps="false"
                android:textColor="?attr/darkTextSecondaryColor"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:id="@+id/nav_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:divider="@drawable/divider"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle">

                <com.mchapagai.library.views.MaterialTextView
                    android:id="@+id/navigate_to_tmdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/tmdb_link"
                    android:textColor="?attr/darkLinkColor" />

                <com.mchapagai.library.views.MaterialTextView
                    android:id="@+id/navigate_to_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:text="@string/title_about_activity"
                    android:textColor="?attr/darkLinkColor"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/label_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/darkTextSecondaryColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:text="@string/signup_placeholder"
                android:textColor="?attr/darkLinkColor"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />
        </LinearLayout>

        <com.mchapagai.library.views.PageLoader
            android:id="@+id/progress_page_loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>