<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        app:cardCornerRadius="@dimen/margin_0dp"
        app:cardElevation="@dimen/margin_4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:clipToPadding="false">

            <com.mchapagai.library.views.MaterialTextView
                android:id="@+id/shows_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:drawablePadding="@dimen/margin_8dp"
                android:drawableStart="@drawable/icon_calendar"
                android:gravity="center_vertical"
                android:text="@string/date_placeholder"
                android:textColor="?attr/darkTextSecondaryColor"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <com.mchapagai.library.views.MaterialTextView
                android:id="@+id/shows_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_0dp"
                android:drawablePadding="@dimen/margin_8dp"
                android:drawableStart="@drawable/icon_ratings_star"
                android:gravity="center_vertical"
                android:text="@string/rating_placeholder"
                android:textColor="?attr/darkTextSecondaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shows_release_date"
                app:layout_constraintTop_toTopOf="@+id/shows_release_date" />

            <com.mchapagai.library.views.MaterialTextView
                android:id="@+id/shows_etails_over_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/about_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/shows_ratings"
                app:layout_constraintTop_toBottomOf="@+id/shows_ratings" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>
