<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:descendantFocusability="blocksDescendants">

    <TextView
            android:id="@+id/original_title"
            style="@style/MovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06"/>

    <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:drawableStart="@drawable/icon_calendar"
            android:drawablePadding="@dimen/margin_8dp"
            android:gravity="center_vertical"
            android:text="@string/date_placeholder"
            android:textColor="?attr/darkTextSecondaryColor"
            android:textStyle="italic"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/original_title"/>

    <TextView
            android:id="@+id/ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_0dp"
            android:drawableStart="@drawable/icon_ratings_star"
            android:drawablePadding="@dimen/margin_8dp"
            android:gravity="center_vertical"
            android:text="@string/rating_placeholder"
            android:textColor="?attr/darkTextSecondaryColor"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/release_date"
            app:layout_constraintTop_toTopOf="@+id/release_date"/>

    <TextView
            android:id="@+id/details_over_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:text="@string/about_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/release_date"
            app:layout_constraintTop_toBottomOf="@+id/release_date"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_genre_recycler_view"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_over_view"
            tools:listitem="@layout/movie_details_genre_items"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_creditsrecycler_view"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_genre_recycler_view"
            tools:listitem="@layout/movie_details_credit_items"/>

    <View
            android:id="@+id/video_divider"
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_creditsrecycler_view"/>

    <TextView
            android:id="@+id/videos_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/movie_details_trailer_placeholder"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_creditsrecycler_view"
            app:layout_constraintTop_toBottomOf="@+id/movie_creditsrecycler_view"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_video_recycler_view"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:minHeight="@dimen/margin_126dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videos_title"
            tools:layout_height="@dimen/margin_126dp"
            tools:listitem="@layout/movie_details_video_items"/>

    <TextView
            android:id="@+id/videos_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:text="@string/details_empty_video_message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/movie_video_recycler_view"
            app:layout_constraintEnd_toEndOf="@+id/details_empty_video"
            app:layout_constraintStart_toStartOf="@+id/details_empty_video"/>

    <com.mchapagai.library.views.MaterialImageView
            android:id="@+id/details_empty_video"
            android:layout_width="@dimen/margin_96dp"
            android:layout_height="@dimen/margin_96dp"
            android:alpha="0.3"
            android:src="@drawable/icon_sad_face"
            android:tint="?attr/darkSecondaryColor"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/videos_error_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/videos_error_text"/>

    <View
            android:id="@+id/reviews_divider"
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_video_recycler_view"/>


    <TextView
            android:id="@+id/detail_review_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:text="@string/reviews_header"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/reviews_divider"
            app:layout_constraintTop_toBottomOf="@+id/reviews_divider"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_recycler_view"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_review_header"
            tools:listitem="@layout/movie_reviews_list_item"/>

    <TextView
            android:id="@+id/tmdb_attribution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:alpha="0.6"
            android:text="@string/details_tmdb_attribution"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_recycler_view"/>

    <com.mchapagai.library.views.MaterialImageView
            android:id="@+id/tmdb_logo"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_32dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:alpha="0.4"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_tmdb_logo"
            android:tint="?attr/darkLinkColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tmdb_attribution"/>

</android.support.constraint.ConstraintLayout>